<resources>
    <string name="app_name"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_tracker">Tracker</string>
    <string name="navigation_drawer_insulin">Insulin Locator</string>
    <string name="navigation_drawer_calculator">BMI Calculator</string>
    <string name="navigation_drawer_reminders">Reminders</string>
    <string name="navigation_drawer_leaderboard">Leaderboard</string>
    <string name="navigation_drawer_settings">Settings</string>


    <string name="login">Login</string>
    <string name="register">Save</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="messagereg">We just need a few more details to complete your sign up. Please be as accurate as possible.</string>
    <string name="diabetestype">Diabetes Type</string>
    <string name="result_text_default">Please Focus Camera to Barcode</string>

    <string name="alreadyregistered">Already registered? Sign in here.</string>

    <string name="noaccount">Not have an account? Register here</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign in</string>


    <string-array name="diabetestype">
        <item>Type 1</item>
        <item>Type 2</item>
    </string-array>

    <string-array name="insulinrequired">
        <item>Yes</item>
        <item>No</item>
    </string-array>
</resources>
