<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logologin" />

    <TextView
        android:id="@+id/txtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/email"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/etEmail"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/password"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <EditText
        android:id="@+id/etPassword"
        style="@android:style/Widget.Material.EditText"
        android:layout_width="fill_parent"

        android:layout_height="wrap_content"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/buttonRegister"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_above="@+id/tvSignin"
        android:layout_alignParentStart="true"
        android:text="@string/register"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        tools:text="Register" />

    <TextView
        android:id="@+id/tvSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"

        android:text="@string/alreadyregistered"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

</LinearLayout>